komet-bau: Tester ut ny kjøring av tester